--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a class="nav-link" href="index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">ABOUT</a>
+              <a class="nav-link" href="about.html">TENTANG</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="template.html">OUR TEMPLATE</a>
@@ -53,7 +53,7 @@
               <a class="nav-link" href="proveding.html">PROVEDING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">CONTACT US</a>
+              <a class="nav-link" href="contact.html">KONTAK</a>
             </li>
           </ul>  
           <form class="form-inline my-2 my-lg-0">
@@ -73,7 +73,7 @@
             <div class="carousel-item active">
               <div class="row">
                 <div class="col-md-6">
-                  <h1 class="banner_taital">Email mark provides <br> you a wonderful viewing experience </h1>
+                  <h1 class="banner_taital">HALO PENJELAJAH <br> you a wonderful viewing experience </h1>
                   <div class="contact_bt"><a href="contact.html">Contact Us</a></div>
                 </div>
                 <div class="col-md-6">
